--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,14 +5,11 @@
 <title>サイバーセキュリティ演習</title>
 </head>
 <body>
-
-<a href = "workshop.html">演習参加者はこちらから</a><br>
-<a href = "workshop.html?isadmin">管理者/オブザーバはこちらから</a><br>
-
+<a href="workshop.html"><button type="button">演習参加者はこちらから</button></a><br><br>
+<a href ="workshop.html?isadmin"><button type="button">管理者/オブザーバはこちらから</button></a><br>
 <span style="float:right;font-size:smaller">
-	<a href = "doc/releasenote.txt">リリースノート</a>|
-	<a href = "doc/designsheet/designsheet.xlsm">デザインシート</a>|
-	<a href = "doc/schema/reference.html">シナリオデータ仕様(作成中)</a>
+<a href = "doc/releasenote.txt">リリースノート</a>|
+<a href = "doc/schema/reference.html">シナリオデータ仕様(作成中)</a>
 </span>
 </body>
 </html>
