--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,11 +5,14 @@
 <title>サイバーセキュリティ演習</title>
 </head>
 <body>
-<a href="workshop.html"><button type="button">演習参加者はこちらから</button></a><br><br>
-<a href ="workshop.html?isadmin"><button type="button">管理者/オブザーバはこちらから</button></a><br>
-<span style="float:right;font-size:smaller">
-<a href = "doc/releasenote.txt">リリースノート</a>|
-<a href = "doc/schema/reference.html">シナリオデータ仕様(作成中)</a>
-</span>
+  <div style="color: white; background: #002062; border-left: #002062 solid 10px; border: #002062 solid 1px; font-size: 100%; padding: 20px;">
+  IMANE-PC (Incident MAnagement Networking Exercise)
+</div><br>
+  <a href="workshop.html"><button type="button">演習参加者はこちらから</button></a><br><br>
+  <a href ="workshop.html?isadmin"><button type="button">管理者/オブザーバはこちらから</button></a><br>
+  <span style="float:right;font-size:smaller">
+    <a href = "doc/releasenote.txt">リリースノート</a>|
+    <a href = "doc/schema/reference.html">シナリオデータ仕様(作成中)</a>
+  </span>
 </body>
 </html>
