[change]タイトルの背景色を#8b0000に変更

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,7 +5,7 @@
 <title>サイバーセキュリティ演習</title>
 </head>
 <body>
-  <div style="color: white; background: #002062; border-left: #002062 solid 10px; border: #002062 solid 1px; font-size: 100%; padding: 20px;">
+  <div style="color: white; background: #8b0000; border-left: #8b0000 solid 10px; border: #8b0000 solid 1px; font-size: 100%; padding: 20px;">
   IMANE-PC (Incident MAnagement Networking Exercise)
 </div><br>
   <a href="workshop.html"><button type="button">演習参加者はこちらから</button></a><br><br>
