--- a/WebContent/workshop.html
+++ b/WebContent/workshop.html
@@ -11,6 +11,7 @@
 
 <link href = "image/blue/style.css" rel = "stylesheet" type = "text/css"/>
 <link rel = "stylesheet" type="text/css" href = "css/fricore.css" id = "theme-default" class = "theme">
+<link rel = "stylesheet" type="text/css" href = "css/fricore.systemview.css">
 <link rel = "stylesheet" type="text/css" href = "css/custom.css" id = "theme-fancy" class="theme theme-custom" title="明るい色" disabled = false>
 <link rel = "stylesheet" type="text/css" href = "css/custom2.css" id = "theme-dark" class="theme theme-custom" title="暗い色" disabled = true>
  
@@ -170,7 +171,8 @@
 <span style='float:right'>
 ヘルプ:
 
-<button title="シナリオの前提条件となるシステム構成の説明図を表示します。"  onclick='viewSystem()'>システム構成</button>
+<!-- <button title="シナリオの前提条件となるシステム構成の説明図を表示します。"  onclick='viewSystem()'>システム構成</button>-->
+<button title="システムの状態の表示・非表示を切り替えます。"  onclick='showSystemView()'>システム状態</button>
 <button title="シナリオの前提条件となる組織構成と連絡ルートの説明図を表示します。"   onclick='viewOrganizations()'>組織と連絡ルート</button>
 <button title="シナリオで定義された役割とアクションの情報を表示します。"   onclick='viewActions()' class = "live">役割とアクション</button>
 
@@ -571,8 +573,30 @@
 
 <div id = "loading"></div>
 <div id = "balloon" class="balloon"></div>
-<div id = "effect-container"></div>
+<div id = "effect-container" style = "display:none">
 
+</div>
+
+
+
+<div id = "systemview-container" style = "display:none; margin:0; padding:0;">
+<div class = "ctrl" style = "top:0;right:0;border:none" id = "systemview-ctrl">
+	
+	<input type = "checkbox" class='fa fa-reload iconbutton' id = "systemview-systemstate" 
+		title='システムビュー/ユーザビューを切り替え' onchange='refreshSystemView()' checked="checked"><label for = "systemview-systemstate" title='システムビュー/ユーザビューを切り替え'>ビューを切り替え</label>
+	<span class='fa fa-sync iconbutton' 
+		title='更新' onclick='refreshSystemView()'></span>
+	
+	<!-- <span class='fa fa-search-plus iconbutton' 
+			title='拡大' onclick='svgZoomin("#systemview-container svg")'></span>
+	<span class='fa fa-search-minus iconbutton' 
+			title='縮小' onclick='svgZoomout("#systemview-container svg")'></span>-->
+	<span class='fa fa-expand-arrows-alt iconbutton' 
+			title='全体表示' onclick='svgFitToContainer("#systemview-container svg")'></span>
+</div>
+<div id = "systemview-placeholder" style = "margin:0; padding:0;width:100%;height:100%"></div>
+</div>
+<div id = "systemview-tooltip" class = "systemview-tooltip"></div>
 
 
 <!-- --------------------------- ヘルプ関連 ----------------------------------->
