--- a/WebContent/workshop.html
+++ b/WebContent/workshop.html
@@ -377,6 +377,7 @@
 <!-- --------------------------- ファシリテータ用: 管理メニュー ----------------------------------->
 
 <div id = "wfview" class='main' style = "display:none;position:relative;top:0;width:99%;">
+	<div style = "float:right"><button title="システムの状態の表示・非表示を切り替えます。"  onclick='showSystemView()'>システム状態</button></div>
 	<div id  = "processlist" class='wrapper' style='width:100%;position:relative;'>
 	<h4 class = "debugmenu" style = "display:none">演習シナリオ
 		<span class='ctrl '>
