組織図を更新

--- a/WebContent/workshop.html
+++ b/WebContent/workshop.html
@@ -586,7 +586,7 @@
 <div class = "ctrl" style = "top:0;right:0;border:none" id = "systemview-ctrl">
 	
 	<input type = "checkbox" class='fa fa-reload iconbutton' id = "systemview-systemstate" 
-		title='システムビュー/ユーザビューを切り替え' onchange='refreshSystemView()' checked="checked"><label for = "systemview-systemstate" title='システムビュー/ユーザビューを切り替え'>ビューを切り替え</label>
+		title='システムビュー/ユーザビューを切り替え(演習中はチェックしないでください)' onchange='refreshSystemView()' checked="false"><label for = "systemview-systemstate" title='システムビュー/ユーザビューを切り替え'>ビューを切り替え</label>
 	<span class='fa fa-sync iconbutton' 
 		title='更新' onclick='refreshSystemView()'></span>
 	
