--- a/WebContent/organizations.html
+++ b/WebContent/organizations.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang = "ja">
 <head>
 <meta charset="UTF-8">
 <title>組織構成</title>
+<link href = "js/lib/jquery-ui.min.css" rel = "stylesheet" type = "text/css"/>
+<script type = "text/javascript" src = "js/lib/jquery-3.0.0.js"></script>
+<script type = "text/javascript" src = "js/lib/jquery-ui.js"></script>
+
 </head>
 <body>
-<img src = "image/organization.jpg"  width="100%" height="100%">
+<script>
+$(function() {
+    $( "#organization-container" ).tabs();
+  });
+</script>
+
+<div id = "organization-container" >
+<ul>
+	<li><a href = "#organization-page1">会社概要</a></li>
+	<li><a href = "#organization-page2">組織図(全体)</a></li>
+	<li><a href = "#organization-page3">組織図(事業所)</a></li>
+	<li><a href = "#organization-page4">役割</a></li>
+	<li><a href = "#organization-page5">連絡網</a></li>
+</ul>
+<div id = "organization-page1"><img class = "image-page"  src = "image/organization/p1.png"  width="100%" ></div>
+<div id = "organization-page2"><img class = "image-page" src = "image/organization/p2.png"  width="100%" ></div>
+<div id = "organization-page3"><img class = "image-page" src = "image/organization/p3.png"  width="100%" ></div>
+<div id = "organization-page4"><img class = "image-page" src = "image/organization/p4.png"  width="100%" ></div>
+<div id = "organization-page5"><img class = "image-page" src = "image/organization/p5.png"  width="100%" ></div>
+</div>
 </body>
 </html>
